objects/Next_Number_Utility__c.object
<CustomObject>
    <description>This custom object hold records that will be used with business logic to supply the next number in a series.  It is originally written for a user to get the next WGS case number, but hopefully it will be generic enough that if other sequential numbers are needed a record in this object can be used.</description>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <description>The entity for which the number is to be generated.</description>
        <label>Anthem Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO/NV</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_State_Prefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current State Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Number_Used__c</fullName>
        <description>This field will store the last number in use</description>
        <label>Last Number Used</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Value__c</fullName>
        <description>The is the max value for the number series.</description>
        <label>Max Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>The system the sequential number is generated for.</description>
        <inlineHelpText>Select the system the next number is to be generated for.</inlineHelpText>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WGS</fullName>
                    <default>true</default>
                    <label>WGS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warning_Value__c</fullName>
        <description>This value is the value that will be added to the Last number given and will trigger a workflow when it equals the max value.</description>
        <label>Warning Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Next Number Utility</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Number Utility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Next Number Utility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>